--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,11 @@
     <string name="chapter_title">Chapter %s: %s</string>
     <string name="label_chapter_sub_no">Sub-chapter No.</string>
     <string name="label_chapter_no">Chapter No.</string>
+    <string name="label_material_no">Material No.</string>
+    <string name="label_title">Title</string>
+    <string name="label_description">Description</string>
+    <string name="teaching_mode">Mode</string>
+    <string name="label_choose">Choose</string>
+    <string name="label_pick_video">Pick a Video</string>
+    <string name="label_add_video">Add Vide</string>
 </resources>
