--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,7 @@
     <string name="corrupted_file">File corrupted or missing</string>
     <string name="hint_email_list">Eg. foo@gmail.com, ...</string>
     <string name="label_email">Email</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="label_my_discussion">My Discussions</string>
 </resources>
