--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,6 @@
     <string name="key_is_lecturer">KEY_IS_LECTURER</string>
     <string name="key_is_logged_in">KEY_IS_LOGGED_IN</string>
     <string name="label_logout">Logout</string>
-    <string name="label_about">About</string>
     <!-- TODO: Remove or change this placeholder text -->
 
     <string name="label_course">Course</string>
@@ -56,9 +55,8 @@
     <string name="welcome">Welcome,</string>
     <string name="subheader_course_user">%s\n%s</string>
     <string name="corrupted_file">File corrupted or missing</string>
-    <string name="hint_email_list">Eg. foo@gmail.com, ...</string>
+    <string name="hint_email_list">Eg. foo@gmail.com, &#8230;</string>
     <string name="label_email">Email</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="label_my_discussion">My Discussions</string>
 </resources>
